# rural-jet-lag

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE-ASSETS  README.md  netlify.toml  package-lock.json  package.json  plan-vehicle-stations-site.md  pyproject.toml  vehicle-stations.md
assets/: README.md
assets/cards/: README.md
challenges/: README.md  challenges.md
hide-and-seek/: README.md  design-backlog.md  rules.md  setup.md
hide-and-seek/assets/: README.md
hide-and-seek/assets/cards/: README.md
hide-and-seek/assets/investigation-book/: README.md
hide-and-seek/reference/: README.md  cards.md  notes.md  sources.md  transit-friction.md
hide-and-seek/reference/wiki/: README.md  curses-uk-season-subset.md
hide-and-seek/rules/: README.md  budgeting.md  full-ruleset.md  geography.md  hiding-zone.md  transportation.md
hide-and-seek/tools/: README.md  generate_vehicle_stations.py  ocr_expansion_cards.py  requirements.txt
hide-and-seek/tools/geojson-samples/: README.md  region.geojson
old-tools/: README.md  generate_vehicle_stations.py
old-tools/parity-test/: README.md  run_python.py
old-tools/parity-test/baseline/: js-sioux.kml  python-sioux.kml
reference/: README.md  transit-friction.md
rules/: README.md  budgeting.md  full-ruleset.md  geography.md  transportation.md
rural_jet_lag/: vehicle_stations.py
site/: index.html  package.json  vite.config.js
site/plugins/: markdown.js
site/rules/: index.html
site/setup/: index.html
site/shared/: header.html  site.css  stations.css
site/stations/: index.html  overpass-browser.js
site/vehicle-stations/: index.html
stations-generator/: README.md  package-lock.json  package.json
stations-generator/cli/: package.json
stations-generator/cli/src/: args.js  main.js  overpass-node.js  parity.js
stations-generator/core/: package.json
stations-generator/parity-test/: README.md
stations-generator/site/: index.html  vite.config.js
stations-generator/test/: README.md  regression.test.js
tools/: README.md  driving_isochrone.py  generate_vehicle_stations.py  package-lock.json  package.json  requirements.txt
tools/cli/: package.json
tools/core/: package.json
tools/geojson-samples/: README.md
tools/parity-test/: README.md  polygon.geojson  run_python.py
tools/site/: index.html  package.json
(+31 files in other folders)
