[project]
name = "rural-jet-lag"
version = "0.1.0"
description = "Unofficial fan adaptation of Jet Lag: The Game for rural environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opening-hours-py>=1.2.0",
    "pypdf>=6.10.2",
    "rapidocr-onnxruntime>=1.4.4",
    "requests>=2.33.1",
    "shapely>=2.1.2",
]

[project.scripts]
vehicle-stations = "tools.generate_vehicle_stations:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
