[project]
name = "rural-jet-lag"
version = "0.1.0"
description = "Unofficial fan adaptation of Jet Lag: The Game for rural environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opening-hours-py>=1.2.0",
    "pypdf>=6.10.2",
    "rapidocr-onnxruntime>=1.4.4",
    "requests>=2.33.1",
    "shapely>=2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The Python tool now lives in old-tools/ as a transitional reference; the
# hyphen makes it un-importable as a Python module, so there's no console
# script and no Python package shipped from this repo. Invoke the legacy
# tool directly: `uv run python old-tools/generate_vehicle_stations.py …`.
# The new JS tooling under tools/ replaces it.
[tool.hatch.build.targets.wheel]
bypass-selection = true
