[project]
name = "rural-jet-lag"
version = "0.1.0"
description = "Unofficial fan adaptation of Jet Lag: The Game for rural environments"
readme = "README.md"
requires-python = ">=3.10"
# Python remains here only for the OCR pipeline that processes scanned
# rulebook material into per-game reference notes (hide-and-seek/tools/
# ocr_expansion_cards.py). The cross-game vehicle-stations generator is
# JS — see tools/.
dependencies = [
    "rapidocr-onnxruntime>=1.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Nothing to package — the repo ships content + a JS workspace; the one
# remaining Python script under hide-and-seek/tools/ is invoked directly
# via uv run, not installed as a console script.
[tool.hatch.build.targets.wheel]
bypass-selection = true
